--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.10",
+    "@apollo/experimental-nextjs-app-support": "^0.11.8",
     "@nextui-org/spinner": "^2.2.6",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
@@ -24,6 +25,7 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "dompurify": "^3.2.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
@@ -32,7 +34,7 @@
     "graphql-request": "^7.1.2",
     "html-react-parser": "^5.2.1",
     "lucide-react": "^0.469.0",
-    "next": "^15.1.4",
+    "next": "^15.1.6",
     "next-themes": "^0.2.1",
     "pdfjs-dist": "^3.11.174",
     "postcss": "^8.4.31",
@@ -43,6 +45,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^6.1.6",
     "react-pdf": "^9.2.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.1.1",
