--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
-  }
+  },
+  "proxy": "https://backend.citiesprojectglobal.com"
 }
