--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.10",
+    "@apollo/experimental-nextjs-app-support": "^0.11.8",
     "@nextui-org/spinner": "^2.2.6",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
@@ -34,6 +35,7 @@
     "lucide-react": "^0.469.0",
     "next": "^15.1.4",
     "next-themes": "^0.2.1",
+    "nextjs-google-analytics": "^2.3.7",
     "pdfjs-dist": "^3.11.174",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
@@ -43,6 +45,8 @@
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.3",
     "react-pdf": "^9.2.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.1.1",
