--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MY_SECRET_TOKEN="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
-NEXT_PUBLIC_GRAPHQL_URL="https://backend.citiesprojectglobal.com/graphql"
+NEXT_PUBLIC_GRAPHQL_URL="https://digitractive.com/citiesnewbackend/graphql"
 NEXT_BACKEND_STRIPE_URL="https://digitractive.com/cityprojectglobal/stripephp/create.php"
 NEXT_STRIPE_DONATION_RETURN_URL="https://staggingcitiesprojectglobal.vercel.app/donation"
 NEXT_STRIPE_VANTAGE_RETURN_URL="https://staggingcitiesprojectglobal.vercel.app/vantage-point/form"
