--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint", 
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@apollo/client": "^3.11.10",
@@ -34,6 +35,7 @@
     "html-react-parser": "^5.2.1",
     "lucide-react": "^0.469.0",
     "next": "^15.1.6",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "nextjs-google-analytics": "^2.3.7",
     "pdfjs-dist": "^3.11.174",
