--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-google-recaptcha": "^3.1.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
