--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "lint": "next lint"
   },
   "dependencies": {
     "@apollo/client": "^3.11.10",
@@ -30,12 +29,12 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
+    "google-translate-api-x": "^10.7.2",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
     "html-react-parser": "^5.2.1",
     "lucide-react": "^0.469.0",
-    "next": "^15.1.6",
-    "next-sitemap": "^4.2.3",
+    "next": "^15.1.4",
     "next-themes": "^0.2.1",
     "nextjs-google-analytics": "^2.3.7",
     "pdfjs-dist": "^3.11.174",
@@ -46,7 +45,6 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-google-recaptcha": "^3.1.0",
-    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
