--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MY_SECRET_TOKEN="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
 NEXT_PUBLIC_GRAPHQL_URL="https://cityglobalprojects.insiderwebsolutions.com/graphql"
-NEXT_BACKEND_STRIPE_URL="https://cityglobalprojects.insiderwebsolutions.com/stripephp/create.php"
+NEXT_BACKEND_STRIPE_URL="https://cityglobalprojects.insiderwebsolutions.com/wp-json/cgp/v1/create"
 NEXT_STRIPE_DONATION_RETURN_URL="https://staggingcitiesprojectglobal.vercel.app/donation"
 NEXT_STRIPE_DONATIONSEC_RETURN_URL="https://staggingcitiesprojectglobal.vercel.app/donation-second"
 NEXT_STRIPE_VANTAGE_RETURN_URL="https://staggingcitiesprojectglobal.vercel.app/vantage-point/form"
